2005-04-30  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Replace # with dnl. Use modern versions of autoconf
	  macros, and get rid of call to AC_CANONICAL_TARGET, AC_PROG_CC
	  and AC_HEADER_STDC. No longer need to set
	  ATLAS_ELEMENT_TYPEDEF_PRIVATE.

2005-04-28  James Turner  <james@worldforge.org>

    * Eris/Entity.cpp, Eris/Entity.h, Eris/View.cpp: support an 'accel'
      attribue on MOVE operations, and use it do do better motion prediction.
      
    * Eris/Room.cpp: change how delayed sight of people is handled, to
      avoid duplicate emission of the Appearance signals. This is a very old
      bug, which was finally tracked down by Hagen.
      
    * test/stubServer.cpp: update the StubServer for the changes to Atlas
      ObjectFactory.
      
2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Eris/TypeInfo.cpp: Modify Atlas Factories usage to match modified
	  Atlas-C++ API.

2005-04-28  James Turner  <james@worldforge.org>

    * Eris/IGRouter.cpp: remove a debug() where a SET op is received for
      pending entities, and change the message for unknown entities to be
      a warning, instead of an error.
      
    * Eris/Connection.cpp: if Atlas logging is enabled, also log redispatches.

    * Eris/Timeout.cpp: implement cancel() method
    
    * Eris/MetaQuery.cpp: fix a long-standing bug where the 'server failed
      to respond' timeout wasn't cancelled when a sucessful response was
      received. Thanks, Hagen.

    * Eris/BaseConnection.cpp: make the connect timeout a lot longer,
      20 seconds instead of 5.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Eris/IGRouter.cpp: Code workaround for types in Sight(Create)
	  op handler that occurs in apps with multiple connectios.

2005-04-27  James Turner  <james@worldforge.org>

	* test/tests.cpp, test/commander.cpp, test/stubServer.h,
	  test/stubServer.cpp: add a test for sight of entity creation. 

2005-04-25  James Turner  <james@worldforge.org>
