@@ -90,6 +90,7 @@ StubServer::StubServer(short port, int cmdSocket) :
     subclassType("game_entity", "seed");
     subclassType("seed", "potato");
     subclassType("thing", "book");
+    subclassType("thing", "ball");
 }
 
 StubServer::~StubServer()
@@ -139,6 +140,8 @@ void StubServer::setupTestAccounts()
     defineEntity("_hut_01", "building", "_world", "A hut");
     defineEntity("_hut_02", "building", "_world", "Another hut");
     defineEntity("acc_b_character", "settler", "_hut_01", "Joe Blow");
+    
+    defineEntity("_ball", "ball", "_hut_01", "A silly ball");
     
     defineEntity("_table_1", "thing", "_hut_01", "An old table");
     std::vector<double> posl;
